DSA sirius exit time